[life-xp-activity-service -25] create integration and e2e tests
