# life-xp-activity-service-infrastructure/src/main/java/com/bladestepapp/lifexpactivityserviceinfrastructure/entities/enums/ActivityCategory.java
@@ -1,5 +1,5 @@
 package com.bladestepapp.lifexpactivityserviceinfrastructure.entities.enums;
 
 public enum ActivityCategory {
-    SPORTS, EDUCATION, HEALTH, ENTERTAINMENT, OTHER
+    SPORT, EDUCATION, HEALTH, ENTERTAINMENT, OTHER
 }
